--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rimraf dist && tsc",
+    "format": "prettier --write \"{source,test}/**/*.{js,ts}\"",
     "prepublishOnly": "npm run build",
-    "test": "npm run build && npm run test:specs",
+    "test": "run-s build test:specs test:format",
+    "test:format": "prettier-check '{source,test}/**/*.{js,ts}'",
     "test:specs": "nyc mocha -r test/index.js 'test/specs/**/*.spec.js'"
   },
   "files": [
@@ -15,6 +17,16 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/perry-mitchell/data-interchange.git"
+  },
+  "lint-staged": {
+    "{source,test}/**/*.{js,ts}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "keywords": [
     "data",
@@ -36,8 +48,13 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
     "mocha": "^8.1.3",
+    "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
+    "prettier": "^1.19.1",
+    "prettier-check": "^2.0.0",
     "rimraf": "^3.0.2",
     "sinon": "^9.2.0",
     "typescript": "^4.0.3"
