--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "homepage": "https://github.com/perry-mitchell/data-interchange#readme",
   "dependencies": {
+    "@buttercup/channel-queue": "^0.5.0",
     "layerr": "^0.1.2"
   },
   "devDependencies": {
